# nomad-oasis-schema-parser-plugin

./: .cruft.json  404.html  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  move_template_files.sh  pyproject.toml
docs/: index.md
explanation/: explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
reference/: references.html
search/: search_index.json
src/nomad_oasis_schema_parser_plugin/parsers/: __init__.py  parser.py
src/nomad_oasis_schema_parser_plugin/parsers/utils/: utils.py
src/nomad_oasis_schema_parser_plugin/schema_packages/: __init__.py  schema_package.py
tests/data/: test.archive.yaml
tests/parsers/: test_parser.py
tutorial/: tutorial.html
